force-app/main/default/objects/Reciprocal_Role__c/Reciprocal_Role__c.object-meta.xml
<CustomObject>
    <label>Relationship Role</label>
    <nameField>
        <label>Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Roles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>