force-app/main/default/objects/Reciprocal_Role__c/fields/Create_Inverse_Role__c.field-meta.xml
<CustomField>
    <fullName>Create_Inverse_Role__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, a new inverse role is created for the role.</description>
    <inlineHelpText>If checked, a corresponding inverse role is automatically created.</inlineHelpText>
    <label>Create Inverse Role</label>
    <type>Checkbox</type>
</CustomField>