force-app/main/default/objects/Reciprocal_Role__c/fields/Inverse_Role__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Role__c</fullName>
    <label>Inverse Role</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>