force-app/main/default/objects/Reciprocal_Role__c/fields/InverseRelationship__c.field-meta.xml
<CustomField>
    <fullName>InverseRelationship__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Uniquely identifies the relationship between Role and InverseRole__c so that it can be referenced by a trigger that creates the inverse relationship record.</description>
    <label>InverseRelationship</label>
    <referenceTo>Reciprocal_Role__c</referenceTo>
    <relationshipName>Reciprocal_Roles</relationshipName>
    <type>Lookup</type>
</CustomField>